Added David Hussman and Bob Payne Session information

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Niel is a popular speaker on a variety of IT and leadership topics including IT 
 </p>
       </div>
 
-      <div class="col-md-6 centered">
+      <div class="col-md-6 centered" id="bob-payne">
         <img class="img img-circle" src="assets/img/speakers/bob-payne.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Bob Payne</b></h4>
@@ -248,6 +248,22 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
 
       <div class="col-md-6 centered">
         <div class="col-md-4">
+          <a href="#david-hussman" class="smoothScroll">
+            <img class="img img-circle" src="assets/img/speakers/david-hussman.jpg" height="60px" width="60px" alt="">
+          </a>
+          <br>
+          <h4>David Hussman</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b>Lessons in Gravity: What keeps you down?</b></h4>
+          <p>
+            What keeps your best ideas from reaching escape velocity? Constraint come in many forms like process bloat, corporate hierarchies and bright shiny technologies are just a few gravity wells we face. If product and customer learning are the obvious target of uncertainty and value, why do we add baggage that inhibits learning and how does it keep sneaking in to our companies and teams? This talk will challenge you to examine which things you can jettison that allow for your innovations to lift off and move you towards your next best investment instead of being sucked down to planet old school, again.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-md-6 centered">
+        <div class="col-md-4">
           <a href="#niel-nickolaisen" class="smoothScroll">
             <img class="img img-circle" src="assets/img/speakers/niel-nickolaisen.jpg" height="60px" width="60px" alt="">
           </a>
@@ -258,6 +274,22 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
           <h4><b>Bringing It All Together – Using Agile and Lean To Transform IT</b></h4>
           <p>
           The IT group at Western Governors University (WGU) was under incredible pressure. They were tasked with driving innovation, producing significant improvements in operational performance and building credibility – and do this nearly immediately while handling a complete application refresh and dealing with rapid growth. To produce the desired results, the group took a four-pronged approach: They used Agile to improve project results. They relied on Lean to improve internal processes. They rigorously aligned and rationalized the portfolio to the university and market. They created a culture of trust and ownership. The net result was a dramatic increase in throughput and innovation. In this session, Niel Nickolaisen explains the tools WGU used to transform IT.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-md-6 centered">
+        <div class="col-md-4">
+          <a href="#bob-payne" class="smoothScroll">
+            <img class="img img-circle" src="assets/img/speakers/bob-payne.jpg" height="60px" width="60px" alt="">
+          </a>
+          <br>
+          <h4>Bob Payne</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b>Scaling Agile Theory and Practice</b></h4>
+          <p>
+            Einstein is credited with saying: "In theory, theory and practice are the same. In practice, they are not."  Not surprisingly the theories about scaling agile methods exhibit the same properties. This session will discuss the topic of Scaling Agile. Why certain patterns prevail and how those patterns can change when they confront the realities of "practice".
           </p>
         </div>
       </div>
