--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-<title>Des Moines Agile Day - 2014</title>
+<title>Des Moines Agile - 2014</title>
 
 <!-- Bootstrap core CSS -->
 <link href="assets/css/bootstrap.css" rel="stylesheet">
