Register button replaces with sold out button

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ ga('send', 'pageview');
       <h1>dsmAgile</h1>
       <p>Discuss. Discover. Learn.</p>
       <p>Friday, September 12th 2014</p>
-      <a class="btn btn-success btn-large" href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">Register Now
+      <a class="btn btn-danger btn-large" href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">Sold Out!
       </a>
     </header>
   </div>
