added location to header

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@ ga('send', 'pageview');
       <h1>dsmAgile</h1>
       <p>Discuss. Discover. Learn.</p>
       <p>Friday, September 12th 2014</p>
+      <div class="location">
+      Des Moines Public Library<br>
+      1000 Grand Ave<br>
+      Des Moines, IA<br>
+      </div>
+
       <a class="btn btn-danger btn-large" href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">Sold Out!
       </a>
     </header>
