added Natalie's session

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ He is the founder and Chair of the AgileDC conference and is involved and speaks
         <p>Kristin Runyan is the VP of Product Management at Businessolver, a benefits administration company located in West Des Moines, IA. Kristin is the co-author of a textbook called “Introduction to Agile Methods” which was released in the summer of 2014. Kristin is certified as a Scrum Master (CSM), Scrum Product Owner (CSPO), and a Project Management Professional (PMP). She is also a 2011 winner of the Women of Innovation award from the Technology Association of Iowa. Kristin got her undergraduate degree at Texas Christian University (TCU) and her MBA at Saint Louis University (SLU). Her twitter handle is @KristinRunyan and she regularly blogs at <a href="http://www.runyanconsulting.com">www.runyanyconsulting.com</a>.</p>
       </div>
 
-      <div class="col-md-6 centered">
+      <div class="col-md-6 centered" id="natalie-warnert">
         <img class="img img-circle img-md" src="assets/img/speakers/natalie-warnert.jpg" alt="">
         <br>
         <h4><b>Natalie Warnert</b></h4>
@@ -299,6 +299,29 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
           <p>Einstein is credited with saying: "In theory, theory and practice are the same. In practice, they are not."  Not surprisingly the theories about scaling agile methods exhibit the same properties. This session will discuss the topic of Scaling Agile. Why certain patterns prevail and how those patterns can change when they confront the realities of "practice".</p>
         </div>
       </div>
+
+
+
+      <div class="col-md-6 centered">
+        <div class="col-md-4">
+          <a href="#natalie-warnert" class="smoothScroll">
+            <img class="img img-circle img-sm" src="assets/img/speakers/natalie-warnert.jpg" alt="">
+          </a>
+          <br>
+          <h4>Natalie Warnert</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b>Metrics: Not Just for Managers Anymore</b></h4>
+          <p>Scrum and metrics have not always gotten along. Usually, when metrics are brought up it is at a manager or executives request to see how a product is progressing and if the deadline and budget will be met, or worse, unmet/exceeded.</p>
+
+          <p>Most of today's Agile Lifecycle Management (ALM) tools have a multitude of different metrics to show just about anything you can think of from burndowns to burnups, cycle time to work in progress and beyond. But do Scrum teams really know what these metrics mean and do management, ScrumMasters and the teams know how to properly utilize them to determine important trends to aid in inspection and adaption?</p>
+
+          <p>Metrics: Not Just for Managers Anymore will explore how to teach teams to interpret and appreciate what their metrics are showing them. It will look at how to improve metrics by modifying practices and modify practices by improving the metrics.</p>
+        </div>
+      </div>
+
+
+
     </div>
   </div>
 
