added pollyanna, squared bob's photo

--- a/index.html
+++ b/index.html
@@ -200,14 +200,38 @@ He is the founder and Chair of the AgileDC conference and is involved and speaks
         </p>
       </div>
 
-      <div class="col-md-6 centered">
-        <img class="img img-circle img-md" src="assets/img/speakers/unknown.jpg" alt="">
+      <div class="col-md-6 centered" id="pollyanna-pixton">
+        <img class="img img-circle img-md" src="assets/img/speakers/pollyanna-pixton.jpg" alt="">
         <br>
         <h4><b>Pollyanna Pixton</b></h4>
         <!--<a href="#" class="icon icon-twitter"></a>-->
         <!--<a href="#" class="icon icon-facebook"></a>-->
         <!--<a href="#" class="icon icon-flickr"></a>-->
-        <p></p>
+        <p>An international collaborative leadership expert, Pollyanna Pixton developed the models for
+collaboration and collaborative leadership through her over forty years of working inside 
+and consulting with corporations and organizations. She helps companies create workplaces 
+where talent and innovation are unleashed—making them more productive, efficient, and 
+profitable.</p>
+
+<p>Pollyanna is a founding partner of Accelinnova, a consulting firm for leaders transforming 
+their organization. She speaks and writes on topics of creating cultures of trust, leading 
+collaboration, and business agility. Her models are found in the books she co-authored, 
+<i>The Agile Culture: Leading though Trust and Ownership</i>, (Addison Wesley Professional, 
+March 2014) and <i>Stand Back and Deliver: Accelerating Business Agility</i>, (Addison Wesley 
+Professional, July 2009).</p>
+
+<p>Ms. Pixton was primarily responsible for building the Swiss Electronic Stock Exchange, 
+developing sophisticated control systems for electrical power-plants throughout the world, 
+and converting complex technologies and data systems to merge large financial institutions. 
+Her background includes leading the development of e-commerce projects, real-time 
+applications, positioning systems, and original computational research. In 2004, she was 
+selected as one of thirty Visionary Women to Watch, a program that recognizes women 
+who bring new insight to their fields, and in 2010 she was selected for achieving that vision 
+as 30 Women to Watch, awarded by Utah Business Magazine. Pollyanna is a sought-after 
+keynote speaker and lecturer at universities in the areas of business ethics, organizational 
+development, and collaborative leadership.</p>
+<p>
+Her education includes a master’s degree in computer science, three years of graduate studies in theoretical physics, and a bachelor’s degree in mathematics. Contact her at ppixton@accelinnova.com.</p>
       </div>
 
       <div class="col-md-6 centered">
@@ -320,6 +344,21 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
         </div>
       </div>
 
+      <div class="col-md-6 centered">
+        <div class="col-md-4">
+          <a href="#pollyanna-pixton" class="smoothScroll">
+            <img class="img img-circle img-sm" src="assets/img/speakers/pollyanna-pixton.jpg" alt="">
+          </a>
+          <br>
+          <h4>Pollyanna Pixton</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b>Building a Culture for High Performance Teams</b></h4>
+          <p>We know that teams and individuals that take ownership of their work out perform those that don’t, often by 50%! For high performance teams, ownership is essential. But, leaders struggle letting their teams take ownership. Why? They are afraid if they trust their teams, they will not take ownership and fail. Leaders must create a culture of trust and help their teams take ownership. But what is the team builds the wrong product? Teams must align with the strategy and purpose of the business as well as value to the customer. Finally, the organization must deal honestly with ambiguity. Uncertainty is the new normal.
+</p>
+<p>How do teams, individuals and leaders address these issues? Pollyanna provides you with the tools to create a culture of trust by dealing with fear of collaboration; helping teams take ownership through asking questions and not giving answers (“How do you want to solve it?”); aligning with the business by using decision filters based on a business value conversation; and finally, helping teams show real progress and not committing until all risks are within an acceptable range.</p>
+        </div>
+      </div>
 
 
     </div>
