added todd's bio and presentation

--- a/index.html
+++ b/index.html
@@ -156,13 +156,24 @@ Mr. Davidson is a recognized expert and sought after speaker in agile methodolog
       </div>
 
       <div class="col-md-6 centered" id="todd-little">
-        <img class="img img-circle img-md" src="assets/img/speakers/unknown.jpg" alt="">
+        <img class="img img-circle img-md" src="assets/img/speakers/todd-little.jpg" alt="">
         <br>
         <h4><b>Todd Little</b></h4>
         <!--<a href="#" class="icon icon-twitter"></a>-->
         <!--<a href="#" class="icon icon-facebook"></a>-->
         <!--<a href="#" class="icon icon-flickr"></a>-->
-        <p></p>
+        <p>Todd Little is Vice President of Product Development for IHS. He has been involved
+in most aspects of software development with a focus on commercial software 
+applications for oil and gas exploration and production.
+</p><p>
+He is a co-author of the Declaration of Interdependence for Agile Leadership and 
+a founding member and past President of the Agile Leadership Network. He has 
+served on the Board of Directors of both the Agile Alliance and the Agile Leadership 
+Network.
+</p><p>
+Todd is a co-author of the book “Stand Back and Deliver: Accelerating Business 
+Agility,” Addison Wesley. Todd has written several articles for IEEE Software and 
+posts all his publications and presentations on his website www.toddlittleweb.com.</p>
       </div>
 
       <div class="col-md-6 centered" id="niel-nickolaisen">
@@ -360,6 +371,31 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
         </div>
       </div>
 
+ <div class="col-md-6 centered">
+        <div class="col-md-4">
+          <a href="#todd-little" class="smoothScroll">
+            <img class="img img-circle img-sm" src="assets/img/speakers/todd-little.jpg" alt="">
+          </a>
+          <br>
+          <h4></h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b>
+          Mythbusting Software Estimation
+          </b></h4>
+<p>In the world of software development, estimation challenges exist on multiple fronts. Teams are faced with estimating value, cost, and/or schedule at the task, story, project, and/or portfolio level. There are some agile practices that claim to help with estimation, including not doing estimation at all, but still many agile projects are challenged. In this session Todd will look into some of the reasons for these challenges by exploring a number of myths of software estimation and then setting out to validate or bust these myths. Learn what the real data says, not what some pundit says should be true.
+Some of the myths that will be explored include:
+</p>
+<ul>
+<li> Historical Estimation Accuracy
+<li> Relative Estimation
+<li> The Cone of Uncertainty
+<li> Velocity
+<li> Scope Creep
+<li> Wisdom of Crowds
+</ul>
+        </div>
+      </div>
 
     </div>
   </div>
