added ryan's session

--- a/index.html
+++ b/index.html
@@ -397,6 +397,27 @@ Some of the myths that will be explored include:
         </div>
       </div>
 
+      <div class="col-md-6 centered">
+        <div class="col-md-4">
+          <a href="#ryan-bergman" class="smoothScroll">
+            <img class="img img-circle img-sm" src="assets/img/speakers/ryan-bergman.jpg" alt="">
+          </a>
+          <br>
+          <h4>Ryan Bergman</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b>Building an Airplane While Flying: Strategies for Continuous Delivery</b></h4>
+          <p>Continuous Delivery can be a hard concept for many people coming into agile. The act of continuously pushing new code into production on a regular basis can be scary. For many people the idea is so far out-there they think they couldn’t possibly achieve it and never try. This presentation will focus on different techniques for practicing continuous delivery while still controlling the end user experience and managing risk. We will look at how to manage multi-sprint “epics”, target selective groups for rollout, and protect the end users from “too much” change.</p>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
     </div>
   </div>
 
