added todd's name to his session

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
             <img class="img img-circle img-sm" src="assets/img/speakers/todd-little.jpg" alt="">
           </a>
           <br>
-          <h4></h4>
+          <h4>Todd Little</h4>
         </div>
         <div class="col-md-8">
           <h4><b>
