Added Kristin Runyan session information

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ He is the founder and Chair of the AgileDC conference and is involved and speaks
         <p></p>
       </div>
 
-      <div class="col-md-6 centered">
+      <div class="col-md-6 centered" id="kristin-runyan">
         <img class="img img-circle img-md" src="assets/img/speakers/kristin-runyan.jpg" alt="">
         <br>
         <h4><b>Kristin Runyan</b></h4>
@@ -291,6 +291,20 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
         <div class="col-md-8">
           <h4><b>Scaling Agile Theory and Practice</b></h4>
           <p>Einstein is credited with saying: "In theory, theory and practice are the same. In practice, they are not."  Not surprisingly the theories about scaling agile methods exhibit the same properties. This session will discuss the topic of Scaling Agile. Why certain patterns prevail and how those patterns can change when they confront the realities of "practice".</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 centered">
+        <div class="col-md-4">
+          <a href="#kristin-runyan" class="smoothScroll">
+            <img class="img img-circle img-sm" src="assets/img/speakers/kristin-runyan.jpg" alt="">
+          </a>
+          <br>
+          <h4>Kristin Runyan</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b>&quot;Work on this, Not That&quot; - The Science and Art of Prioritization</b></h4>
+          <p>The session will walk through a number of strategies for prioritizing incoming work, outlining methods used by Pragmatic Marketing, Mike Cohn, Roman Pichler and personal experience.  This will be an interactive session where teams will be given information to prioritize their assigned work.  We will discuss effective strategies to apply objective and value-driven measures to the list so it is clear and defensible.</p>
         </div>
       </div>
     </div>
