--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
       <h1 class="centered">SESSIONS</h1>
       <hr>
 
-      <div class="col-md-6 centered">
+      <div class="col-md-6 centered" id="david-hussman-session">
         <div class="col-md-4">
           <a href="#david-hussman" class="smoothScroll">
             <img class="img img-circle" src="assets/img/speakers/david-hussman.jpg" height="60px" width="60px" alt="">
@@ -298,14 +298,14 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
           <h4>David Hussman</h4>
         </div>
         <div class="col-md-8">
-          <h4><b>Lessons in Gravity: What keeps you down?</b></h4>
+          <h4><b><a href="#david-hussman-sched" class="smoothScroll">Lessons in Gravity: What keeps you down?</a></b></h4>
           <p>
             What keeps your best ideas from reaching escape velocity? Constraint come in many forms like process bloat, corporate hierarchies and bright shiny technologies are just a few gravity wells we face. If product and customer learning are the obvious target of uncertainty and value, why do we add baggage that inhibits learning and how does it keep sneaking in to our companies and teams? This talk will challenge you to examine which things you can jettison that allow for your innovations to lift off and move you towards your next best investment instead of being sucked down to planet old school, again.
           </p>
         </div>
       </div>
 
-      <div class="col-md-6 centered">
+      <div class="col-md-6 centered" id="niel-nickolaisen-session">
         <div class="col-md-4">
           <a href="#niel-nickolaisen" class="smoothScroll">
             <img class="img img-circle img-sm" src="assets/img/speakers/niel-nickolaisen.jpg" alt="">
@@ -314,14 +314,14 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
           <h4>Niel Nickolaisen</h4>
         </div>
         <div class="col-md-8">
-          <h4><b>Bringing It All Together – Using Agile and Lean To Transform IT</b></h4>
+          <h4><b><a href="#niel-nickolaisen-sched" class="smoothScoll">Bringing It All Together – Using Agile and Lean To Transform IT</a></b></h4>
           <p>
           The IT group at Western Governors University (WGU) was under incredible pressure. They were tasked with driving innovation, producing significant improvements in operational performance and building credibility – and do this nearly immediately while handling a complete application refresh and dealing with rapid growth. To produce the desired results, the group took a four-pronged approach: They used Agile to improve project results. They relied on Lean to improve internal processes. They rigorously aligned and rationalized the portfolio to the university and market. They created a culture of trust and ownership. The net result was a dramatic increase in throughput and innovation. In this session, Niel Nickolaisen explains the tools WGU used to transform IT.
           </p>
         </div>
       </div>
 
-      <div class="col-md-6 centered">
+      <div class="col-md-6 centered" id="bob-payne-session">
         <div class="col-md-4">
           <a href="#bob-payne" class="smoothScroll">
             <img class="img img-circle img-sm" src="assets/img/speakers/bob-payne.jpg" alt="">
@@ -330,12 +330,12 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
           <h4>Bob Payne</h4>
         </div>
         <div class="col-md-8">
-          <h4><b>Scaling Agile Theory and Practice</b></h4>
+          <h4><b><a href="#bob-payne-sched">Scaling Agile Theory and Practice</a></b></h4>
           <p>Einstein is credited with saying: "In theory, theory and practice are the same. In practice, they are not."  Not surprisingly the theories about scaling agile methods exhibit the same properties. This session will discuss the topic of Scaling Agile. Why certain patterns prevail and how those patterns can change when they confront the realities of "practice".</p>
         </div>
       </div>
 
-      <div class="col-md-6 centered">
+      <div class="col-md-6 centered" id="natalie-warnert-session">
         <div class="col-md-4">
           <a href="#natalie-warnert" class="smoothScroll">
             <img class="img img-circle img-sm" src="assets/img/speakers/natalie-warnert.jpg" alt="">
@@ -344,7 +344,7 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
           <h4>Natalie Warnert</h4>
         </div>
         <div class="col-md-8">
-          <h4><b>Metrics: Not Just for Managers Anymore</b></h4>
+          <h4><b><a href="#natalie-warnert-sched">Metrics: Not Just for Managers Anymore</a></b></h4>
           <p>Scrum and metrics have not always gotten along. Usually, when metrics are brought up it is at a manager or executives request to see how a product is progressing and if the deadline and budget will be met, or worse, unmet/exceeded.</p>
 
           <p>Most of today's Agile Lifecycle Management (ALM) tools have a multitude of different metrics to show just about anything you can think of from burndowns to burnups, cycle time to work in progress and beyond. But do Scrum teams really know what these metrics mean and do management, ScrumMasters and the teams know how to properly utilize them to determine important trends to aid in inspection and adaption?</p>
@@ -353,7 +353,7 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
         </div>
       </div>
 
-      <div class="col-md-6 centered">
+      <div class="col-md-6 centered" id="pollyanna-pixton-session">
         <div class="col-md-4">
           <a href="#pollyanna-pixton" class="smoothScroll">
             <img class="img img-circle img-sm" src="assets/img/speakers/pollyanna-pixton.jpg" alt="">
@@ -362,14 +362,14 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
           <h4>Pollyanna Pixton</h4>
         </div>
         <div class="col-md-8">
-          <h4><b>Building a Culture for High Performance Teams</b></h4>
+          <h4><b><a href="#pollyanna-pixton-sched">Building a Culture for High Performance Teams</a></b></h4>
           <p>We know that teams and individuals that take ownership of their work out perform those that don’t, often by 50%! For high performance teams, ownership is essential. But, leaders struggle letting their teams take ownership. Why? They are afraid if they trust their teams, they will not take ownership and fail. Leaders must create a culture of trust and help their teams take ownership. But what is the team builds the wrong product? Teams must align with the strategy and purpose of the business as well as value to the customer. Finally, the organization must deal honestly with ambiguity. Uncertainty is the new normal.
 </p>
 <p>How do teams, individuals and leaders address these issues? Pollyanna provides you with the tools to create a culture of trust by dealing with fear of collaboration; helping teams take ownership through asking questions and not giving answers (“How do you want to solve it?”); aligning with the business by using decision filters based on a business value conversation; and finally, helping teams show real progress and not committing until all risks are within an acceptable range.</p>
         </div>
       </div>
 
- <div class="col-md-6 centered">
+ <div class="col-md-6 centered" id="todd-little-session">
         <div class="col-md-4">
           <a href="#todd-little" class="smoothScroll">
             <img class="img img-circle img-sm" src="assets/img/speakers/todd-little.jpg" alt="">
@@ -395,7 +395,7 @@ Some of the myths that will be explored include:
         </div>
       </div>
 
-      <div class="col-md-6 centered">
+      <div class="col-md-6 centered" id="kristin-runyan-session">
         <div class="col-md-4">
           <a href="#kristin-runyan" class="smoothScroll">
             <img class="img img-circle img-sm" src="assets/img/speakers/kristin-runyan.jpg" alt="">
@@ -404,12 +404,12 @@ Some of the myths that will be explored include:
           <h4>Kristin Runyan</h4>
         </div>
         <div class="col-md-8">
-          <h4><b>&quot;Work on this, Not That&quot; - The Science and Art of Prioritization</b></h4>
+          <h4><b><a href="#kristin-runyan-sched">&quot;Work on this, Not That&quot; - The Science and Art of Prioritization</a></b></h4>
           <p>The session will walk through a number of strategies for prioritizing incoming work, outlining methods used by Pragmatic Marketing, Mike Cohn, Roman Pichler and personal experience.  This will be an interactive session where teams will be given information to prioritize their assigned work.  We will discuss effective strategies to apply objective and value-driven measures to the list so it is clear and defensible.</p>
         </div>
       </div>
 
-      <div class="col-md-6 centered">
+      <div class="col-md-6 centered" id="ryan-bergman-session">
         <div class="col-md-4">
           <a href="#ryan-bergman" class="smoothScroll">
             <img class="img img-circle img-sm" src="assets/img/speakers/ryan-bergman.jpg" alt="">
@@ -422,6 +422,50 @@ Some of the myths that will be explored include:
           <p>Continuous Delivery can be a hard concept for many people coming into agile. The act of continuously pushing new code into production on a regular basis can be scary. For many people the idea is so far out-there they think they couldn’t possibly achieve it and never try. This presentation will focus on different techniques for practicing continuous delivery while still controlling the end user experience and managing risk. We will look at how to manage multi-sprint “epics”, target selective groups for rollout, and protect the end users from “too much” change.</p>
         </div>
       </div>
+      
+      <div class="col-md-6 centered" id="tim-andersen-session">
+        <div class="col-md-4">
+          <a href="#tim-andersen" class="smoothScroll">
+            <img class="img img-circle img-sm" src="assets/img/speakers/tim-andersen.jpeg" alt="">
+          </a>
+          <br>
+          <h4>Tim Andersen</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b><a href="#tim-andersen-sched">TBD</a></b></h4>
+          <p></p>
+        </div>
+      </div>
+
+
+      <div class="col-md-6 centered" id="brandon-carlson-session">
+        <div class="col-md-4">
+          <a href="#brandon-carlson" class="smoothScroll">
+            <img class="img img-circle img-sm" src="assets/img/speakers/brandon-carlson.jpg" alt="">
+          </a>
+          <br>
+          <h4>Brandon Carlson</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b><a href="#brandon-carlson-sched">TBD</a></b></h4>
+          <p></p>
+        </div>
+      </div>
+
+      <div class="col-md-6 centered" id="jeffrey-davidson-session">
+        <div class="col-md-4">
+          <a href="#jeffrey-davidson" class="smoothScroll">
+            <img class="img img-circle img-sm" src="assets/img/speakers/jeffrey-davidson.jpg" alt="">
+          </a>
+          <br>
+          <h4>Jeffrey Davidson</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b><a href="#jeffrey-davidson-sched">TBD</a></b></h4>
+          <p></p>
+        </div>
+      </div>
+
     </div>
   </div>
 
@@ -433,7 +477,114 @@ Some of the myths that will be explored include:
     </div>
   </section>
 
-
+  <div class="container" id="schedule" name="schedule">
+    <br>
+    <div class="row white centered">
+      <h1 class="centered">SCHEDULE</h1>
+      <hr/>
+      
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th class="col-time">Schedule</th>
+            <th>North</th>
+            <th>Middle</th>
+            <th>South</th>
+          </tr>
+        </thead>
+        <tbody>
+        <tr class="col-all">
+          <td class="col-time">8:30 - 9:00</td>
+          <td colspan="3">Arrival and Registration</td>
+        </tr>
+        <tr class="col-all">
+          <td class="col-time">9:00 - 9:45</td>
+          <td colspan="3">Opening - Announcements and Speaker Introductions</td>
+        </tr>
+        <tr class="col-all">
+          <td class="col-time">9:45 - 10:00</td>
+          <td colspan="3">Break</td>
+        </tr>
+        <tr>
+          <td class="col-time">10:00 - 11:00</td>
+          <td>
+            <div id="kent-mcdonald-sched">Kent McDonald</div>
+            <a href="#kent-mcdonald-session"class="smoothScroll">TBD</a>
+          </td>
+          <td>
+            <div id="david-hussman-sched">David Hussman</div>
+            <a href="#david-hussman-session"class="smoothScroll">Lessons in Gravity: What keeps you down?</a>
+          </td>
+          <td>
+            <div id="brandon-carlson-sched">Brandon Carlson</div>
+            <a href="#brandon-carlson-session"class="smoothScroll">TBD</a>
+          </td>
+        </tr>
+        <tr class="col-all">
+          <td class="col-time">11:00 - 11:15</td>
+          <td colspan="3">Break</td>
+        </tr>
+        <tr>
+          <td class="col-time">11:15 - 12:15</td>
+          <td>
+            <div id="natalie-warnert-sched">Natalie Warnert</div>
+            <a href="#natalie-warnert-session"class="smoothScroll">Metrics: Not Just for Managers Anymore</a>
+          </td>
+          <td>
+            <div id="pollyanna-pixton-sched">Pollyanna Pixton</div>
+            <a href="#pollyanna-pixton-session"class="smoothScroll">Building a Culture for High Performance Teams</a>
+          </td>
+          <td>
+            <div id="tim-andersen-sched">Tim Andersen</div>
+            <a href="#tim-andersen-session"class="smoothScroll">TBD</a>
+          </td>
+        </tr>
+        <tr class="col-all">
+          <td class="col-time">12:15 - 1:15</td>
+          <td colspan="3">Lunch - Provided</td>
+        </tr>
+        <tr>
+          <td class="col-time">1:15 - 2:15</td>
+          <td>
+            <div id="kristin-runyan-sched">Kristin Runyan</div>
+            <a href="#kristin-runyan-session"class="smoothScroll">&quot;Work on this, Not That&quot; - The Science and Art of Prioritization</a>
+          </td>
+          <td>
+            <div id="bob-payne-sched">Bob Payne</div>
+            <a href="#bob-payne-session"class="smoothScroll">Scaling Agile Theory and Practice</a>
+          </td>
+          <td>
+            <div id="jeffrey-davidson-sched">Jeffrey Davidson</div>
+            <a href="#jeffrey-davidson-session"class="smoothScroll">TBD</a>
+          </td>
+        </tr>
+        <tr class="col-all">
+          <td class="col-time">2:15 - 2:30</td>
+          <td colspan="3">Break</td>
+        </tr>
+        <tr>
+          <td class="col-time">2:30 - 3:30</td>
+          <td>
+            <div id="todd-little-sched">Todd Little</div>
+            <a href="#todd-little-session"class="smoothScroll">Mythbusting Software Estimation</a>
+          </td>
+          <td>
+            <div id="niel-nickolaisen-sched">Niel Nickolaisen</div>
+            <a href="#niel-nickolaisen-session"class="smoothScroll">Bringing It All Together – Using Agile and Lean To Transform IT</a>
+          </td>
+          <td>
+            <div id="ryan-bergman-sched">Ryan Bergman</div>
+            <a href="#ryan-bergman-session"class="smoothScroll">Building an Airplane While Flying: Strategies for Continuous Delivery</a>
+          </td>
+        </tr>
+        <tr class="col-all">
+          <td class="col-time">3:30 - 5:00</td>
+          <td colspan="3">Open Space - Americana (Networking, Tapas, Drinks)</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
   <!-- ==== SPEAKERS==== -->
   <!--<div class="container" id="spaces" name="spaces">-->
   <!--<br>-->
